# Rishi-AI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/ai/formatting/: formatter.py
app/ai/generation/: exception.py  groq.py  pipeline.py
app/ai/interfaces/: generator.py
app/ai/prompts/: builder.py  templates.py
app/ai/schemas/: answer.py
app/core/: paths.py
app/corpus/: registry.py  source.py
app/data/chunking/: base.py  pipeline.py
app/data/cleaning/: __init__.py  base.py  header__footer.py  pipeline.py  unicode.py  whitespace.py
app/data/embeddings/: base.py  pipeline.py  sentence_transformer.py
app/data/ingestion/: pdf_extractor.py
app/data/ocr/: base.py  rapid.py
app/evaluation/: benchmark.py  evaluator.py  metrics.py  models.py
app/retrieval/: base.py
docs/: CHANGELOG.md  architecture.md  metadata_schema.md  roadmap.md
docs/devlog/: 2026-06-22-phase-1.md
scripts/chunking/: chunk_documents.py
scripts/embedding/: index_chroma.py
scripts/ingestion/: build_manifest.py  ingest_documents.py
scripts/retrieval/: semantic_search.py
storage/: corpus_manifest.json  vision.json
tests/ai/: test_pipeline.py  test_prompt.py
tests/chunking/: test_chapter.py  test_recursive.py  test_semantic.py
tests/corpus/: test_registry.py
tests/data/: test_chunking.py  test_embedding.py  test_extract.py  test_metadata.py  test_pipeline.py
tests/evaluation/: test_benchmark.py
tests/ingestion/: test_pdf_ocr.py
tests/retrieval/: test_bm25.py  test_hybrid.py  test_reranker.py  test_semantic_retrieval.py
ui/: main.py
(+18 files in other folders)
